--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "Project2",
+  "name": "WeatherAPI",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4"
-  },
-  "devDependencies": {},
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
